services/04.lighttpd/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: lighttpd
  namespace: services
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: lighttpd
